--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,30 @@
+# DataSource settings: set here your own configurations for the database connection.
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/needy?autoReconnect=true&useSSL=false&useUnicode=true&amp;characterEncoding=UTF-8&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.username=root
+jdbc.password=root
+jdbc.connectionProperties=useUnicode=true;characterEncoding=utf-8;CharSet=utf8mb4 
+
+# Configuration of Redis Database
+redis.host=localhost
+redis.port=6379
+redis.timeout=60000
+redis.pool.maxidle=100
+redis.pool.minidle=0
+redis.pool.maxactive=1000
 
 #Application configurations
 needy.token.header=Authorization
 needy.token.prefix=Bearer
 needy.token.secret=thisIsSecret
 needy.token.expiration=604800
+
+# Firebase
+needy.firebase.path=firebase/needyfirebase.json
+needy.firebase.database.url=https://needy-180007.firebaseio.com
+
+# API URL route
+server.servlet.contextPath=/api
 
 # Routes
 needy.route.authentication.path=authentication
