Modify path for security.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,6 @@ needy:
       url: https://needy-180007.firebaseio.com
   # Router
   route:
-    authentication:
-      path: authentication
-      refresh: refresh
+    security:
+      authentication: login
+      refresh: relogin
