Update authentication service: unlock time + response body
When user has been locked state => check unlock time
1. If time locked expired => unlock and update state for user
2. else => response a message contain time unlock.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,3 +48,9 @@ needy:
     security:
       authentication: login
       refresh: relogin
+      logout: logout
+    user:
+      register: user/register
+    company:
+      inherent: company
+      register: company/register
