Rename and refactor project - add base response have status and message.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,7 +47,7 @@ needy:
   route:
     security:
       authentication: login
-      refresh: relogin
+      refresh: refresh
       logout: logout
     user:
       register: user/register
