--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,7 @@ needy:
       refresh: refresh
       logout: logout
     user:
-      register: user/register
+      register: register
     company:
       inherent: company
       register: company/register
