Update add StoreBankAccount and check exist user on system.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,7 @@ needy:
       refresh: refresh
       logout: logout
     user:
+      find: find
       register: register
     company:
       inherent: company
