--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 	
 	// OkHttp for FCM
 	compile("com.squareup.okhttp3:okhttp:3.9.0")
+	compile("io.reactivex.rxjava2:rxjava:2.1.3")
+	compile("com.squareup.retrofit2:retrofit:2.3.0")
 	
 	compile("io.jsonwebtoken:jjwt:0.7.0")
 	
